# maritime-osint

./: .env.example  .gitignore  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  ais_listener.py  app.py  dark_periods.py  db.py  ingest.py  loitering.py  map_data.py  noaa_ingest.py  normalize.py  package.json  ports.py  pyproject.toml  reconcile.py  requirements.txt  risk_config.py  run_dev.py  schemas.py  screening.py  security.py  spoof_detector.py  spoofing.py  sts_detection.py  test_overland.py  test_risk_agg.py  verify_spoof.py
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_indicator.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  spoof_detector_plan.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-database-decomposition/: 01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-VALIDATION.md
.planning/phases/02-pre-computed-risk-scores/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-detection-test-coverage/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-security-hardening/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-frontend-ux/: 05-00-PLAN.md  05-00-SUMMARY.md  05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VALIDATION.md  05-VERIFICATION.md
.planning/phases/06-score-history-infrastructure/: 06-00-PLAN.md  06-00-SUMMARY.md  06-01-PLAN.md  06-01-SUMMARY.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-alert-generation-and-in-app-panel/: 07-00-PLAN.md  07-00-SUMMARY.md  07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md  deferred-items.md
.planning/phases/08-vessel-profile-enrichments/: 08-00-PLAN.md  08-00-SUMMARY.md  08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/phase-1/: phase-1-01-PLAN.md  phase-1-01-SUMMARY.md  phase-1-02-PLAN.md  phase-1-02-SUMMARY.md  phase-1-03-PLAN.md  phase-1-03-SUMMARY.md
.planning/phases/phase-2/: RESEARCH.md  phase-2-01-PLAN.md  phase-2-01-SUMMARY.md  phase-2-02-PLAN.md  phase-2-02-SUMMARY.md  phase-2-03-PLAN.md  phase-2-03-SUMMARY.md
.planning/phases/phase-3/: RESEARCH.md  phase-3-01-PLAN.md  phase-3-01-SUMMARY.md  phase-3-02-PLAN.md  phase-3-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/shp/ne_10m_land/: README.md
db/: __init__.py  ais.py  alerts.py  connection.py  findings.py  sanctions.py  schema.py  scores.py  vessels.py
docs/: indicators.md
static/: alerts.js  app.js  map.js  ranking.js  style.css  vessel.js
static/css/: base.css  components.css  layout.css  map.css  ranking.css  vessels.css
templates/: dashboard.html  login.html  vessel.html
tests/: ais_factory.py  conftest.py  test_ais_factory.py  test_alerts.py  test_conftest_guards.py  test_dark_periods.py  test_db_package.py  test_detection_mocked.py  test_fe.py  test_hist.py  test_inf3_anthropic.py  test_inf4_startup.py  test_loitering.py  test_profile_enrichments.py  test_scores.py  test_screening.py  test_security.py  test_spoofing.py  test_sts_detection.py
