[project]
name = "maritime-osint"
version = "0.1.0"
description = "Maritime OSINT platform for sanctions screening and AIS tracking"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "flask>=3.1.0",
    "anthropic>=0.40.0",
    "gunicorn>=22.0.0",
    "psycopg2-binary>=2.9.0",
    "lxml>=5.0.0",
    "websockets>=12.0",
]

[tool.ruff]
# Target Python version
target-version = "py313"

# Line length
line-length = 100

[tool.ruff.lint]
# Rules to enable
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe complexity
    "B",   # flake8-bugbear
]

# Rules to ignore
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 20
